--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,31 @@
-@import-normalize; /* bring in normalize.css styles */
-
 body {
+  box-sizing: border-box;
+  background-color: rgb(251, 248, 245);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Movies-container {
+  padding-top: 24px;
+  width: 100%;
+  margin: 0 auto;
 }
+
+.homeTitle {
+  display: flex;
+  justify-content: center;
+  text-shadow: 2px 1px rgb(225, 201, 43);
+}
+
+.MovieCardsGallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  list-style: none;
+  padding: 0;
+}
+
+
+
+
